# finch

./: .gitignore  .nest-recipes  Cargo.toml  README.md  build  config.toml  start-dev.sh
cli/: Cargo.toml  build
cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ai.rs  chart_patterns.rs  chat_history.rs  data_postgres.rs  data_postgres.rs.example  http_client.rs.example  lib.rs  schwab.rs  settings.rs
desktop/: build
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/ui/src/: App.tsx  index.css  main.tsx
desktop/ui/src/components/: AppShell.tsx  ErrorBoundary.tsx  HelpDocumentsDrawer.tsx  LoginScreen.tsx  SettingsScreen.tsx  TitleBar.tsx
desktop/ui/src/components/trading/: AccountPanel.tsx  AiChatPanel.tsx  CandlestickChart.tsx  ChartSettingsDialog.tsx  ChartsScreen.tsx  IconRail.tsx  OptionChain.tsx  OrderTicket.tsx  PositionsPanel.tsx  QuoteDetails.tsx  ResizeHandle.tsx  StudiesDialog.tsx  TradeScreen.tsx  TradesTable.tsx  TradingWorkspace.tsx
desktop/ui/src/context/: TimezoneContext.tsx
desktop/ui/src/docs/: chart-overlays.md  manifest.ts  market-data-tools.md  overview.md  technical-analysis-tools.md  tips.md  trade-setup.md
desktop/ui/src/lib/: chartIntervals.ts  chartTimeFormat.ts  chatHistory.ts  docs.ts  errors.ts  fontawesome.ts  indicators.ts  mockOhlc.ts  nest.ts  settings.ts  timezone.ts  trendlinePrimitive.ts  useLiveCandles.ts
desktop/ui/src/shell/: index.ts
docs/: ARCHITECTURE.md  CORE_PRINCIPLES.md  README.md  VISION.md  trading-research-assistant-plan.md
docs/architecture/: event-bus.md  panel-api.md  rendering-pipeline.md  state-management.md  workspace-manager.md
docs/specs/: state-management.md
scripts/: create_db.py
src/: action.rs  effect.rs  host.rs  input.rs  lib.rs  reducer.rs  types.rs
src/state/: command.rs  config.rs  focus.rs  mod.rs  notification.rs  panel.rs  plugin.rs  session.rs  task.rs  ui.rs  workspace.rs
tui/: Cargo.toml  build
tui/src/: main.rs
tui/src/screens/: mod.rs
